k8s/ingress.prod.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: 0
  name: frontend
  namespace: i69app
spec:
  tls:
    - hosts:
        - admin.i69app.com
      secretName: frontend-tls
  rules:
    - host: admin.i69app.com
      http:
        paths: 
        - backend:
            service:
              name: frontend
              port:
                number: 80
          path: /
          pathType: Prefix
